Add unit test for day3

--- a/2019/Day03/Day03.csproj
+++ b/2019/Day03/Day03.csproj
@@ -6,6 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Day03.Tests\**" />
+    <EmbeddedResource Remove="Day03.Tests\**" />
+    <None Remove="Day03.Tests\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="input.txt" />
   </ItemGroup>
 
